--- a/index.html
+++ b/index.html
@@ -3,13 +3,47 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
-    <script src="js/jquery-3.3.1.js"></script>
-    <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<script src="js/scripts.js"></script>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+  </head>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
+      </body>
     <title>PIG-DICE-PROJECT</title>
   </head>
   <body>
+      <div class="container"></div>
+      <div class="row">
+          <div class="jumbotron">
+              <h1>PIG DICE GAME</h1>
+            </div>
+        </div>
+    </div>
+   </div>
+    <div class="container">
+        <div class="row">
+           <div class="col-md">
+               <div class="Ticket" id="if">
+                   <h2>Instruction to the game</h2>
+                   <p>The player needs to play the game Frequently to get many points sum to a hundered.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-md-3">
+            <h1>Player 1</h1>
+            <button onclick="rollDice()">ROLLDICE</button>
+            <div id"demo"></div>
+        </div>
+        <div class="col-md-3">
+        <div class="col-md-3">
+          <h2>PLAYER 2</h2>
+          <button onclick="rollDice()">ROLLDICE</button>
+          <div id"mute"></div>
+        </div>
+        <div class="col-md-3"></div>
+     </div>
+    </div>
+</body>
+</html>
