added a backgroud image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>PIG-DICE-PROJECT</title>
   </head>
   <body>
+      <background-image src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFEApfUVgiZHQTOAvo_iNcgb1ovt_2yS0C8Zy-ViQm_xfZ_DUhKg">
       <div class="container"></div>
       <div class="row">
           <div class="jumbotron">
