--- a/index.html
+++ b/index.html
@@ -5,22 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-  </head>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
-      </body>
     <title>PIG-DICE-PROJECT</title>
   </head>
   <body>
-      <background-image src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFEApfUVgiZHQTOAvo_iNcgb1ovt_2yS0C8Zy-ViQm_xfZ_DUhKg"></background-image>
-      <div class="container"></div>
-      <div class="row">
-          <div class="jumbotron">
-              <h1>PIG DICE GAME</h1>
-            </div>
-        </div>
-    </div>
-   </div>
+        <h1>PIG DICE GAME</h1>
+      <div class="container">
     <div class="container">
         <div class="row">
            <div class="col-md">
@@ -31,7 +22,6 @@
             </div>
           </div>
         </div>
-        
         <div class="col-md-3">
             <h1>Player 1</h1>
             <button onclick="rollDice()">ROLLDICE</button>
@@ -41,7 +31,6 @@
         <div class="col-md-3">
           <h2>PLAYER 2</h2>
           <button onclick="rollDice()">ROLLDICE</button>
-          <div id"mute"></div>
         </div>
         <div class="col-md-3"></div>
      </div>
