added button to the index.html

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
           </div>
         </div>
         <div class="col-md-3">
-            <h1>Player 1</h1>
+            <h1>PLAYER 1</h1>
             <button onclick="rollDice()">ROLLDICE</button>
+            <button onclick="rollDice()">HOLD IT</button>
             <div id"demo"></div>
         </div>
         <div class="col-md-3">
-        <div class="col-md-3">
-          <h2>PLAYER 2</h2>
+          <h1>PLAYER 2</h1>
           <button onclick="rollDice()">ROLLDICE</button>
+          <button onclick="rollDice()">HOLD IT</button>
         </div>
         <div class="col-md-3"></div>
      </div>
