added animated images and lightly color

--- a/index.html
+++ b/index.html
@@ -18,19 +18,22 @@
         <br>
         <div class="form-group">
           <label for"New-Player">First-Player</label>
+          <img src="http://www.mobile-phone.pk/images/wallpapers/fighter_animation_hd_mobile_wallpaper.jpg" height=350>
           <input type="text" class="form-control" id="first player">
         </div>
         <div class="form-group">
           <label  for="Second player">Second-player</label>
+          <img src="https://farm2.staticflickr.com/1396/5148903960_23a95a6915.jpg" height=350>
           <input type="text" class="form-control" id="Second player">
         </div>
 
       </form>
      </div>
-     <button id="play">Get started the Game</button>
+     <button id="play">Play!!</button>
      <div class="content">
        <div class="row">
          <div class="col-md-12">
+
            <div class="panel panel-default">
              <div class="panel-heading">
                <h2>START PIG-DICE-GAME</h2>
